# FortKnoxx MCP server — packaged separately so it can be installed
# in an engineer's IDE config without pulling the whole backend tree.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortknoxx-mcp"
version = "0.1.0"
description = "Model Context Protocol server for FortKnoxx security scanning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "FortKnoxx" }]

dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27",
  "pydantic>=2.10",
  "anyio>=4.0",
]

[project.scripts]
fortknoxx-mcp = "fortknoxx_mcp.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/fortknoxx_mcp"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
